--- a/src/omron_moma/package.xml
+++ b/src/omron_moma/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>omron_moma</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>omron_moma</description>
   <maintainer email="guanyewtan@gmail.com">gy</maintainer>
-  <license>TODO: License declaration</license>
+  <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
