--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,7 +47,7 @@ WORKDIR ${WORKSPACE_ROOT}
 
 RUN rm /etc/ros/rosdep/sources.list.d/20-default.list
 
-RUN rosdep init && rosdep update && rosdep install --from-paths ${WORKSPACE_ROOT}/src -y --ignore-src
+RUN rosdep init && rosdep update && rosdep install --from-paths src -y --ignore-src
 
 # Build the workspace
 RUN . /opt/ros/humble/setup.sh && colcon build
