--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,7 +24,9 @@ RUN apt-get update && apt-get install -y \
     python3-colcon-common-extensions \
     python3-rosdep \
     build-essential \
-    curl
+    curl \
+    ros-humble-moveit
+
 
 RUN apt-get clean
 
