--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,7 +1,7 @@
 services:
-  omron_moma_ros2:
-    container_name: omron_moma_ros2
-    image: ghcr.io/collaborativeroboticslab/omron_moma_ros2:humble
+  omron_moma:
+    container_name: omron_moma
+    image: ghcr.io/collaborativeroboticslab/omron_moma:humble
     command:
       # - ros2 run tm_driver tm_driver robot_ip:=<robot_ip_address>
       - ros2 launch tm12x_moveit_config tm12x_run_move_group_headless.launch.py robot_ip:=<robot_ip_address>
