--- a/.github/workflows/humble.yml
+++ b/.github/workflows/humble.yml
@@ -14,7 +14,7 @@ on:
 env:
   REGISTRY: ghcr.io
   OWNER: collaborativeroboticslab
-  IMAGE_NAME: omron_moma_ros2
+  IMAGE_NAME: omron_moma
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
